@startuml
'https://plantuml.com/class-diagram

title "Class diagram for Inventory"

class Player {
- name: String
- inventory: Inventory
----
+ getName(): String
+ getInventory(): Inventory
----
+ Player(name: String)
}
note left : The player himself

class Inventory {
- content: Item[]
- placeNumber: int

----
+ getPlaceNumber(): int
+ isFull(): boolean
+ remove(placeIndex: int)
+ add(placeIndex: int, newItem: Item)
+ getFirstEmptySpace(): int
' Get the index of the first free space of inventory
+ getByIndex(index: int): Item

- show()
'Print the inventory on the console to debug
----
+ Inventory(nbOfSpace: int)
}
note left : The player inventory

class Item {
- name: String
- sprite: JLabel
----
+ getName(): String
+ getSprite(): JLabel
}
note right : Any object that a player can hold in its inventory


Inventory *-- Item
Player *-- Inventory


@enduml